--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".AnimalActivity" />
-        <activity android:name=".DatabaseActivity" />
+        <activity android:name=".MedicineActivity" />
     </application>
 
 </manifest>
